tests/swift/input/test6.swift
// RUN: %not %neal %args | %check

a.b // CHECK: error:\d+ Don't access property b of a
